--- a/view/css/custom/slate.css
+++ b/view/css/custom/slate.css
@@ -70,3 +70,20 @@ button.btn.btn-danger.btn-block {
 .VideoLogoOverlay {
     z-index: 1;
 }
+
+#basicInfo .input-group .form-control {
+	border: none;
+	border-radius: 4px;
+	border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+}
+
+#basicInfo .input-group-addon {
+	border: none;
+}
+
+#basicInfo .input-group-addon:not(:first-child):not(:last-child), 
+#basicInfo .input-group-btn:not(:first-child):not(:last-child), 
+#basicInfo .input-group .form-control:not(:first-child):not(:last-child) {
+    border-radius: 0;
+}
