--- a/view/css/custom/slate.css
+++ b/view/css/custom/slate.css
@@ -131,3 +131,12 @@ legend {
 .input-group-addon {
 	display: none;
 }
+
+.PluginActive, .PluginTags {
+    border: solid 1px rgba(255, 255, 255, 0.5) !important;
+}
+
+.PluginActive:hover, .PluginTags:hover {
+    border: solid 1px rgba(255, 255, 255, 1) !important;
+    cursor: pointer;
+}
